--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <p><center >Java</center></p>
                 <img src="java.png" style="height: 80px;width: 50px;">
                 <progress id="file" value="82" max="100"></progress><br><br>
-                <p><center>C</center></p>
-                <img src="c.png" style="height: 50px;width: 50px;">
+                <p><center>UI & UX Design</center></p>
+                <img src="ux.png" style="height: 50px;width: 50px;">
                 <progress id="file" value="78" max="100"></progress><br><br>
                 <p><center>Python</center></p>
                 <img src="python.jpg" style="height: 50px;width: 50px;">
