--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <img src="phone.png" style="width:30px">
                     </div>
                     <div class="d">
-                        <p>Phone : +91 1234554321</p><br>
+                        <p>Phone : +91 8220943571</p><br>
                     </div>
                 </div>
                 <div class="det">
@@ -157,15 +157,15 @@
                         <img src="email.png" style="width:30px">
                     </div>
                     <div class="d">
-                        <p>E-Mail : tamil123@gmail.com</p><br>
+                        <p>E-Mail : sstamilarasan14@gmail.com</p><br>
                     </div>
                 </div>
                 <div class="det">
                     <div class="d">
-                        <img src="insta.png" style="width:30px">
+                        <img src="link.png" style="width:30px">
                     </div>
                     <div class="d">
-                        <p>Instagram : tamil_arasan</p><br>
+                        <p>Instagram : </p><br>
                     </div>
                 </div>
                 <div class="det">
@@ -181,7 +181,9 @@
                         <img src="lin.png" style="width:30px">
                     </div>
                     <div class="d">
-                        <p>Linked in : tamil@123</p>
+                        <p>Linked in :
+                        <a href="https://www.w3schools.com/">tamilarasan6258</a>
+                         </p>
                     </div>
                 </div>
             </div>
